# agentic_app

./: .gitignore  CLAUDE.md  DATALAB_PROMPT.md  M1_WALKTHROUGH.md  NL2SQL_APPROACH_COMPARISON.md  README.md  REQUEST_FLOW.md  SCHEMA_CONTEXT_PLAN.md  TOOLS_GUIDE.md  docker-compose.yml  explore.ipynb  meyer_4_7_linear_transformations_solutions.md
backend/: .env.example  BACKEND_API_EXPLAINED.ipynb  CLAUDE.md  alembic.ini  experiment.ipynb  llm_router.db  pyproject.toml
backend/.cursor/rules/: 00-backend-fastapi-architecture-boundaries.mdc  20-api-contracts-sse.mdc  40-observability-reliability.mdc  50-security-config.mdc  60-testing-gates.mdc  python-uv-package-management.mdc
backend/app/: config.py  database.py  main.py  migrations.py  models.py  schemas.py
backend/app/adapters/: anthropic_adapter.py  azure_openai_adapter.py  base.py  google_adapter.py  groq_adapter.py  mistral_adapter.py  openai_adapter.py  openai_compatible_adapter.py  registry.py  together_adapter.py
backend/app/agentic/: memory.py  tools.py  traces.py
backend/app/devdb/: __init__.py  dialects.py  schemas.py  service.py
backend/app/middleware/: request_logging.py
backend/app/nl2sql/: executor.py  prompts.py  router.py  sandbox.py  schemas.py  service.py
backend/app/nl2sql/schema_context/: __init__.py  (+4 more)
backend/app/routers/: chat.py  conversations.py  dev_db.py  health.py  runs.py  tools.py
backend/app/services/: conversation.py  tool_executor.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py  002_conversations_schema.py
backend/scripts/: dev_db_query.py  mock_tool_demo.py  seed_azure_db.py  seed_enterprise_schema.sql
backend/tests/: conftest.py  test_adapters.py  test_api.py  test_conversations.py  test_devdb_router_gating.py  test_devdb_service.py  test_nl2sql_api.py  test_nl2sql_sandbox.py  test_nl2sql_service.py  test_schema_context.py  test_tools.py
(+48 files in other folders)
