[project]
name = "llm-router-backend"
version = "0.1.0"
description = "Agentic LLM Router & Playground - Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "openai>=1.60",
    "anthropic>=0.43",
    "httpx>=0.28",
    "sse-starlette>=2.2",
    "sqlglot>=26",
]

[project.optional-dependencies]
db-drivers = [
    "asyncpg>=0.30",
    "aiomysql>=0.2",
    "aioodbc>=0.5",
    "pyodbc>=5.2",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.9",
    "ipykernel>=6.29",
    "numpy"
]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[dependency-groups]
dev = [
    "requests>=2.32.5",
]
